# ai-invention-7dffcf-balance-guided-oblique-trees-signed-spec

./: README.md
dataset_iter1_grinsztajn_tabu/demo/: data_code_demo.ipynb  demo_result.json
dataset_iter1_grinsztajn_tabu/src/: data.py  data_out.json  data_out_adult_mini.json  data_out_adult_preview.json  data_out_california_housing_mini.json  data_out_california_housing_preview.json  data_out_electricity_mini.json  data_out_electricity_preview.json  data_out_higgs_small_mini.json  data_out_higgs_small_preview.json  data_out_jannis_mini.json  data_out_jannis_preview.json  mini_data_out.json  preview_data_out.json  process_datasets.py  pyproject.toml
dataset_iter1_synthetic_plant/demo/: data_code_demo.ipynb  demo_result.json  mini_demo_data.json
dataset_iter1_synthetic_plant/src/: data.py  mini_data_out.json  preview_data_out.json  pyproject.toml
dataset_iter1_synthetic_plant/src/full_data_out/: mini_full_data_out_1.json  mini_full_data_out_2.json  mini_full_data_out_3.json  mini_full_data_out_4.json  mini_full_data_out_5.json  preview_full_data_out_2.json  preview_full_data_out_3.json  preview_full_data_out_4.json  preview_full_data_out_5.json
dataset_iter2_3_additional_gr/demo/: data_code_demo.ipynb  demo_result.json  mini_demo_data.json
dataset_iter2_3_additional_gr/src/: data.py  data_out_credit_mini.json  data_out_credit_preview.json  data_out_eye_movements_mini.json  data_out_eye_movements_preview.json  data_out_miniboone_mini.json  data_out_miniboone_preview.json  mini_data_out.json  preview_data_out.json  process_datasets.py  pyproject.toml
evaluation_iter3_comprehensive_s/demo/: demo_result.json  eval_code_demo.ipynb  mini_demo_data.json
evaluation_iter3_comprehensive_s/src/: eval.py  eval_out.json  mini_eval_out.json  preview_eval_out.json  pyproject.toml
evaluation_iter4_comprehensive_s/demo/: demo_result.json  eval_code_demo.ipynb  mini_demo_data.json
evaluation_iter4_comprehensive_s/src/: eval.py  eval_out.json  full_eval_out.json  mini_eval_out.json  preview_eval_out.json  pyproject.toml
evaluation_iter5_competitive_fig/demo/: demo_result.json  eval_code_demo.ipynb
evaluation_iter5_competitive_fig/src/: eval.py  mini_eval_out.json  preview_eval_out.json  pyproject.toml
evaluation_iter5_definitive_inte/demo/: demo_result.json  eval_code_demo.ipynb  mini_demo_data.json
evaluation_iter5_definitive_inte/src/: eval.py  eval_out.json  mini_eval_out.json  preview_eval_out.json  pyproject.toml
evaluation_iter5_synthesis_of_sy/demo/: demo_result.json  eval_code_demo.ipynb  mini_demo_data.json
evaluation_iter5_synthesis_of_sy/src/: eval.py  eval_out.json  mini_eval_out.json  preview_eval_out.json  pyproject.toml
evaluation_iter6_definitive_main/demo/: demo_result.json  eval_code_demo.ipynb  mini_demo_data.json
evaluation_iter6_definitive_main/src/: eval.py  mini_eval_out.json  preview_eval_out.json  pyproject.toml
evaluation_iter6_hypothesis_verd/demo/: demo_result.json  eval_code_demo.ipynb
evaluation_iter6_hypothesis_verd/src/: eval.py  eval_out.json  mini_eval_out.json  preview_eval_out.json  pyproject.toml
evaluation_iter6_interpretabilit/demo/: demo_result.json  eval_code_demo.ipynb  mini_demo_data.json
evaluation_iter6_interpretabilit/src/: eval.py  eval_out.json  full_method_out.json  mini_eval_out.json  preview_eval_out.json  pyproject.toml
evaluation_iter6_scalability_com/demo/: demo_result.json  eval_code_demo.ipynb  mini_demo_data.json
evaluation_iter6_scalability_com/src/: eval.py  eval_out.json  mini_eval_out.json  preview_eval_out.json  pyproject.toml
evaluation_iter6_signed_vs_unsig/demo/: demo_result.json  eval_code_demo.ipynb
evaluation_iter6_signed_vs_unsig/src/: eval.py  eval_out.json  mini_eval_out.json  preview_method_out.json  pyproject.toml
experiment_iter2_coi_estimator_v/src/: method.py  method_out.json  mini_method_out.json  preview_method_out.json  pyproject.toml
experiment_iter2_end_to_end_bala/src/: method.py  mini_method_out.json  preview_method_out.json  pyproject.toml
experiment_iter2_end_to_end_bala/src/method_out/: mini_full_method_out_1.json  mini_full_method_out_2.json  mini_full_method_out_3.json  mini_full_method_out_4.json  preview_full_method_out_2.json  preview_full_method_out_3.json  preview_full_method_out_4.json
experiment_iter3_end_to_end_synt/src/: method.py  method_out_intermediate.json  mini_method_out.json  preview_method_out.json  pyproject.toml
experiment_iter3_sponge_signed_s/src/: method.py  method_out.json  mini_method_out.json  preview_method_out.json  pyproject.toml
experiment_iter4_co_information/src/: full_method_out.json  method.py  method_out.json  mini_method_out.json  preview_method_out.json  pyproject.toml
paper_latex/: references.bib
paper_latex/workspace/: paper.aux  (+4 more)
(+95 files in other folders)
