[project]
name = "grinsztajn-tabular-benchmark-data"
version = "1.0.0"
requires-python = ">=3.10,<3.12"
description = "Download and standardize 5 tabular benchmark datasets for Balance-Guided Oblique Trees evaluation"
dependencies = [
    "attrs==25.4.0",
    "joblib==1.5.3",
    "jsonschema==4.26.0",
    "jsonschema-specifications==2025.9.1",
    "loguru==0.7.3",
    "numpy==2.4.3",
    "pandas==3.0.1",
    "python-dateutil==2.9.0.post0",
    "referencing==0.37.0",
    "rpds-py==0.30.0",
    "scikit-learn==1.8.0",
    "scipy==1.17.1",
    "six==1.17.0",
    "threadpoolctl==3.6.0",
    "typing-extensions==4.15.0",
]
