[project]
name = "synergy-datasets"
version = "1.0.0"
requires-python = ">=3.10,<3.12"
description = "Synthetic planted-synergy classification datasets for signed spectral clustering validation"
dependencies = [
    "numpy==2.2.6",
    "scikit-learn==1.7.2",
    "scipy==1.15.3",
    "loguru==0.7.3",
]
