[project]
name = "eval-id4-it4-opus"
version = "0.1.0"
requires-python = ">=3.10,<3.12"
dependencies = [
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "fonttools==4.62.1",
    "kiwisolver==1.5.0",
    "loguru==0.7.3",
    "matplotlib==3.10.8",
    "numpy==2.4.3",
    "packaging==26.0",
    "pandas==3.0.1",
    "patsy==1.0.2",
    "pillow==12.1.1",
    "pyparsing==3.3.2",
    "python-dateutil==2.9.0.post0",
    "scikit-posthocs==0.12.0",
    "scipy==1.17.1",
    "seaborn==0.13.2",
    "six==1.17.0",
    "statsmodels==0.14.6",
]
