[project]
name = "eval-signed-vs-unsigned-spectral"
version = "0.1.0"
requires-python = ">=3.10,<3.12"
dependencies = [
    "loguru==0.7.3",
    "numpy==1.26.4",
    "pandas==3.0.1",
    "python-dateutil==2.9.0.post0",
    "scipy==1.17.1",
    "six==1.17.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.backends._legacy:_Backend"
