[project]
name = "balance-guided-oblique-trees"
version = "0.1.0"
requires-python = ">=3.10,<3.12"
dependencies = [
    "numpy==2.4.3",
    "scipy==1.17.1",
    "scikit-learn==1.8.0",
    "joblib==1.5.3",
    "loguru==0.7.3",
    "imodels==2.0.4",
    "npeet @ git+https://github.com/gregversteeg/NPEET.git@8b0d9485423f74e5eb199324cf362765596538d3",
    "pandas==3.0.1",
    "matplotlib==3.10.8",
]
