[project]
name = "sgfigs-experiment"
version = "0.1.0"
requires-python = ">=3.10,<3.12"
dependencies = [
    "joblib==1.5.3",
    "loguru==0.7.3",
    "npeet @ git+https://github.com/gregversteeg/NPEET.git@8b0d9485423f74e5eb199324cf362765596538d3",
    "numpy==2.4.3",
    "scikit-learn==1.8.0",
    "scipy==1.17.1",
    "threadpoolctl==3.6.0",
]
