[project]
name = "sponge-signed-diagnostic"
version = "0.1.0"
requires-python = ">=3.10,<3.12"
dependencies = [
    "numpy==1.26.4",
    "scipy==1.17.1",
    "scikit-learn==1.8.0",
    "joblib==1.5.3",
    "loguru==0.7.3",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.backends._legacy:_Backend"
